# DataAnalyzer

./: .cursorignore  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  app_icon.rc  build.bat  build.sh  build_windows.sh  guide.txt  run.bat  sample_data.csv  sample_data_outlier.csv
include/: data_handler.h  gui.h  logger.h  model.h  plotting.h
lib/: .gitignore
results/model/: structure.txt
results/plot_data/: plot_FeatureImportancePlot_3.csv  plot_ResidualPlot_2.csv  plot_ScatterPlot_1.csv  plot_TimeSeries_0.csv
results/predictions/: predictions.csv
results/results/: metrics.txt
src/: data_handler.cpp  gui.cpp  gui_screens.cpp  logger.cpp  main.cpp  model.cpp  plotting.cpp
src/models/: elasticnet.cpp  gradient_boosting.cpp  linear_regression.cpp  neural_network.cpp  xgboost.cpp
